Bug #289091 --> Thunderbird doesn't handle return receipts for IMAP accounts anymore. Regression fix.

sr=bienvenu